# provenance-probe

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLOSURE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  example-report.html  example-user-warning.html  install.sh  mock_real_qwen.py  mock_vendor.py  mock_zai.py  pyproject.toml  requirements.txt
docs/: counsel-brief.md  live-fingerprint-corpus.md  openrouter-approval-request.md  provider-jurisdiction-corpus.md  tos-notes.md
provenance_probe/: __init__.py  cli.py  client.py  config.py  probe_variants.py  reference.py  report.py  scoring.py  serve.py  userwarn.py
provenance_probe/data/: corpus.py  tokenizer_ref.json
provenance_probe/probes/: artifact.py  behavioral.py  clientsrc.py  deception.py  latency.py  logprob.py  network.py  tokenizer.py  wire.py
provenance_probe/tools/: build_reference_from_gguf.py  fetch_gguf_vocabs.sh
tests/: test_fingerprint_contracts.py  test_network_firstparty.py  test_probe_variants.py  test_reasoning_temperature_retry.py  test_scoring_provenance.py  test_web_adapter.py
