[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-probe"
version = "0.4.1"
description = "GenAI model provenance and jurisdiction assurance harness"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "flask>=3.0"]

[project.optional-dependencies]
reference = ["transformers>=4.44", "tiktoken>=0.7", "sentencepiece>=0.2", "protobuf>=4.0"]
test = ["pytest>=8.0"]

[project.scripts]
provenance-probe = "provenance_probe.cli:main"

[tool.setuptools.packages.find]
include = ["provenance_probe*"]

[tool.setuptools.package-data]
"provenance_probe.data" = ["*.json"]
